fix spacing on landing page

--- a/style/dist.css
+++ b/style/dist.css
@@ -11456,7 +11456,6 @@ textarea {
 
 #landing-brand {
   padding-top: 5rem;
-  margin-left: 15rem;
 }
 
 .logo-text {
