--- a/style/style.scss
+++ b/style/style.scss
@@ -132,7 +132,6 @@ textarea {
 
 #landing-brand {
    padding-top: 5rem;
-   margin-left: 15rem;
 }
 
 .logo-text {
